fix for translated mnu items being too long and breaking navigation. https://www.pivotaltracker.com/story/show/14219913

--- a/media/css/global.css
+++ b/media/css/global.css
@@ -95,7 +95,7 @@ New Header Styles
 	font-size: 12px;
 	color: #555;
 	font-family: Helvetica, Arial, sans-serif;
-	width: 125px;
+	width: 115px;
 	border: 0;
 	background: transparent url(../images/icon_nav_search.png) 0 0 no-repeat;
 	padding: 0 0 0 25px;
